control_api (1.3.0) unstable; urgency=low

  * Added webhook for "UserCreated" event

control_api (1.2.2) stable; urgency=low

  * Added subsecond precision to datetimes.  This change was previously
    announced in the changelog for 1.2.0, but the change was deployed in
    1.2.2.

control_api (1.2.1) stable; urgency=low

  * POST /v1/distributed_to_dos
    * Fixed an issue that caused an HTTP 500 when no value was provided for
      "metadata"

control_api (1.2.0) stable; urgency=low

  * NOTICE: an upcoming release will add subsecond precision to datetimes
    (e.g., ".000Z" at the end of the string instead of just "Z")

  * New TemplateToDo method:
    * GET /v1/template_to_dos
    * NOTE: not filtered by enabled/disabled state.
  * POST /v1/distributed_to_dos
    * Allow "metadata" parameter for DistributedToDo
  * GET /v1/distributed_to_dos
    * Added "tags" to the DistributedToDo objects
    * Added "tags[]" parameter to filter DistributedToDo objects
    * Added "metadata" to the DistributedToDo objects
    * Added "metadata[:key]" parameter to filter DistributedToDo objects
  * GET /v1/distributed_to_dos/:uuid
    * Added "tags" to the DistributedToDo object
    * Added "metadata" to the DistributedToDo object

control_api (1.1.0) stable; urgency=low

  * POST /v1/distributed_to_dos
    * Fix an intermittent issue when parsing "due_on"
  * GET /v1/distributed_to_dos
    * Added "name" to the DistributedToDo objects
  * GET /v1/distributed_to_dos/:uuid
    * Added "name" to the DistributedToDo object

control_api (1.0.0) stable; urgency=low

  * First public API documentation release
  * First public API availability
  * New utility method:
    * GET  /v1/status
  * New DistributedToDo methods:
    * POST /v1/distributed_to_dos
    * GET  /v1/distributed_to_dos
    * GET  /v1/distributed_to_dos/:uuid