@@ -1,5 +1,6 @@
 control_api (1.3.0) unstable; urgency=low
 
+  * Added webhook for "DistributedToDoCompleted" event
   * Added webhook for "UserCreated" event
 
 control_api (1.2.2) stable; urgency=low
